# Protonmail-Tauri

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
